[gd_scene load_steps=7 format=2]

[ext_resource path="res://Arimo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://panel_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/ShopPanel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ItemForSale.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_bottom = 12.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="ShopPanel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 427.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 533, 300 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 600.0 ],
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_right = 1067.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1064.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Shop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="HBoxContainer" parent="."]
margin_top = 64.0
margin_right = 1067.0
margin_bottom = 104.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedups" type="Button" parent="Tabs"]
margin_right = 357.0
margin_bottom = 40.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "Speed-ups"

[node name="Overclocks" type="Button" parent="Tabs"]
margin_left = 355.0
margin_right = 712.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Overclocks"

[node name="Pickaxes" type="Button" parent="Tabs"]
margin_left = 710.0
margin_right = 1067.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Pickaxes"

[node name="Contents" type="VBoxContainer" parent="."]
visible = false
margin_top = 104.0
margin_right = 1067.0
margin_bottom = 600.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Contents"]
margin_right = 1067.0
margin_bottom = 36.0
custom_styles/normal = SubResource( 2 )
text = "Information"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Contents"]
margin_top = 36.0
margin_right = 1067.0
margin_bottom = 496.0
size_flags_vertical = 3
custom_constants/separation = -2

[node name="Items" type="Panel" parent="Contents/HBoxContainer"]
margin_right = 769.0
margin_bottom = 460.0
size_flags_horizontal = 3

[node name="Pickaxes" type="GridContainer" parent="Contents/HBoxContainer/Items"]
visible = false
margin_right = 762.0
margin_bottom = 457.0
size_flags_horizontal = 3
custom_constants/vseparation = -2
custom_constants/hseparation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stick" parent="Contents/HBoxContainer/Items/Pickaxes" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 230.0
item_name = "stick"
item_description = "Use this stick to mine your very first rocks."
money_cost = 250.0

[node name="Overclocks" type="GridContainer" parent="Contents/HBoxContainer/Items"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 764.0
margin_bottom = 459.0
size_flags_horizontal = 3
custom_constants/vseparation = -2
custom_constants/hseparation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedups" type="GridContainer" parent="Contents/HBoxContainer/Items"]
visible = false
margin_left = 382.0
margin_right = 766.0
margin_bottom = 461.0
size_flags_horizontal = 3
custom_constants/vseparation = -2
custom_constants/hseparation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInfo" type="Panel" parent="Contents/HBoxContainer"]
margin_left = 767.0
margin_right = 1067.0
margin_bottom = 460.0
rect_min_size = Vector2( 300, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/HBoxContainer/ItemInfo"]
margin_left = 2.0
margin_top = 2.0
margin_right = 301.0
margin_bottom = 459.0
rect_min_size = Vector2( 299, 0 )

[node name="Name" type="Label" parent="Contents/HBoxContainer/ItemInfo/VBoxContainer"]
margin_top = -1.0
margin_right = 299.0
margin_bottom = 49.0
rect_min_size = Vector2( 0, 50 )
align = 1
autowrap = true

[node name="Description" type="Label" parent="Contents/HBoxContainer/ItemInfo/VBoxContainer"]
margin_top = 54.0
margin_right = 299.0
margin_bottom = 78.0
align = 1
autowrap = true
[connection signal="pressed" from="Tabs/Speedups" to="." method="_on_Speedups_pressed"]
[connection signal="pressed" from="Tabs/Overclocks" to="." method="_on_Overclocks_pressed"]
[connection signal="pressed" from="Tabs/Pickaxes" to="." method="_on_Pickaxes_pressed"]
